spacing problem fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1601,6 +1601,7 @@
     .spellon-homepage .spellon-property-management .spellon-tab-image {
         height: 280px;
         width: 100%;
+        margin-top: 30px;
     }
 
     /* experience */
